# ostree-image-creator

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.jenkins  Makefile  README.md  go.mod  go.sum  mkliriosimage  oic.spec.rpkg  setup.py
.github/workflows/: build.yml  checks.yml  copr.yml  docker.yml
.travis/: docker-push
cmd/oic/: oic.go
internal/actions/: action.go  copy.go  download.go  efiboot.go  manifest.go  mkiso.go  ostreecheckout.go  ostreedeploy.go  ostreemirror.go  ostreepull.go  run.go  template.go  utils.go
internal/logger/: logger.go
internal/oic/: command.go  context.go
internal/ostree/: checkout.go  error.go  glibsupport.h  ostree.go  pull.go  remote.go  repo.go  walk.go
liriosimgcreate/: __init__.py  _builder.py  _disk.py  _grub.py  _live.py  _manifest.py  _object.py  _ostree.py  _syslinux.py
src/: cmd.rs  diskimage.rs  lib.rs  ostree.rs
src/builder/: diskbuilder.rs  error.rs  livebuilder.rs  manifest.rs  mod.rs
src/creator/: diskcreator.rs  livecreator.rs  manifest.rs  mod.rs
src/templates/: mod.rs
src/templates/files/: grub.cfg  syslinux.cfg
